<resources>
    <string name="app_name">SpasDomUserApp</string>

    <!-- NavView resources -->
    <string name="title_home">Главная</string>
    <string name="title_services">Услуги</string>
    <string name="title_chat">Чат</string>
    <string name="title_payment">Оплата</string>
    <string name="title_profile">Профиль</string>
    <string name="profile_setting">Настройки</string>

    <!-- Services resources -->
    <string name="tab_emmer">Экстренные услуги</string>
    <string name="tab_UK">Услуги УК</string>
    <string name="tab_extra">Доп. услуги</string>

    <!-- Chat resources -->
    <string name="chat_house">Чат дома</string>
    <string name="chat_entrance">Подъезд дома</string>
    <string name="chat_UK">СПАС Дом</string>
    <string name="chat_e_house">Старшая по дому</string>
    <string name="chat_e_entrance">Старшая по подъезду</string>
    <string name="title_activity_request">RequestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>