<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_services"
        android:icon="@drawable/ic_baseline_store_24"
        android:title="@string/title_services" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_payment"
        android:icon="@drawable/ic_baseline_payment_24"
        android:title="@string/title_payment" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_account_box_24"
        android:title="@string/title_profile" />

</menu>